# adam

./: .gitignore  AGENT_COLLAB.md  CODEX_PROMPT_B12_DEBUG.md  CODEX_PROMPT_B13.md  CODEX_PROMPT_B16.md  CODEX_PROMPT_B17.md  CODEX_PROMPT_B9_B10.md  FUSION_SPLIT.md  LICENSE  PLAN.md  README.md  adamah_chat.py  install_linux.sh  install_runtime.py  install_windows.bat  requirements-runtime.txt  run_chat_linux.sh  run_chat_windows.bat  runtime_bootstrap.py  vulkan-1.def
releases/adamah-v5.2.0/: LICENSE  README.md  bundle_manifest.json  pyproject.toml
releases/adamah-v5.2.0/adamah/: adamah.c
releases/adamah-v5.2.0/adamah/shaders/: map_matmul_t_xq8.spv  map_matmul_x.spv  map_matvec_t_xq8.spv  map_repeat_penalty.spv  map_rmsnorm.spv
releases/adamah-v5.2.0/adamah/shaders/bf16/: map_layernorm.spv  map_matmul.spv  map_op2.spv  map_rope.spv  map_row_copy.spv
releases/adamah-v5.2.0/adamah/shaders/f32/: map_layernorm.spv  map_matmul_t_x.spv  map_matmul_xq4.spv  map_matmul_xq8.spv  map_op1.spv  map_rmsnorm_x.spv  map_row_gather_xq8.spv  map_softmax_abs.spv
releases/adamah-v5.2.0/adamah/shaders/q4/: map_row_copy.spv
releases/adamah-v5.2.0/adamah/shaders/q6/: map_broadcast.spv  map_gather.spv  map_layernorm.spv  map_op2.spv  map_reduce_small.spv  map_rmsnorm.spv  map_row_copy.spv  map_softmax.spv
releases/adamah-v5.2.0/adamah/shaders/q8/: map_broadcast.spv  map_layernorm.spv  map_op1.spv  map_row_copy.spv  map_scatter.spv
releases/adamah-v5.2.0/adamah/shaders/src/bf16/: map_fma.comp  map_layernorm.comp  map_matmul_t.comp  map_reduce.comp  map_scatter.comp
(+258 files in other folders)
